// Vitest Snapshot v1

exports[`dropdown-menu > DropdownItem Props > : optionsLayout 1`] = `
<div
  class="t-dropdown-menu"
>
  <div
    class="t-dropdown-menu__bar"
  >
    
    <div
      class="t-dropdown-menu__item"
    >
      <div
        class="t-dropdown-menu__title"
      >
        树形双列
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__arrow"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11 6H5l3 4.5L11 6z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-dropdown-menu__item"
    >
      <div
        class="t-dropdown-menu__title"
      >
        树形三列
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__arrow"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11 6H5l3 4.5L11 6z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    
  </div>
  
  <!--v-if-->
  <!--v-if-->
  
</div>
`;

exports[`dropdown-menu > props > : duration 1`] = `
<div
  class="t-dropdown-menu"
>
  <div
    class="t-dropdown-menu__bar t-dropdown-menu__bar t-dropdown-menu__bar--open"
  >
    
    <div
      class="t-dropdown-menu__item t-is-disabled"
    >
      <div
        class="t-dropdown-menu__title"
      >
        菜单
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__arrow"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11 6H5l3 4.5L11 6z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-dropdown-menu__item t-is-active"
    >
      <div
        class="t-dropdown-menu__title"
      >
        菜单
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__arrow"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11 6H5l3 4.5L11 6z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    
  </div>
  
  <!--v-if-->
  <div
    class="t-dropdown-item t-is-expanded"
    style="top: 0px;"
  >
    <!-- &lt;t-overlay v-if="isShowItems && showOverlay" @click="onClickOverlay" /&gt; -->
    <div
      class="t-dropdown-item__content t-is-single"
      style="transition: transform 500ms ease;"
    >
      <div
        class="t-dropdown-item__bd"
      >
        
        
        
        <!-- 单选列表 -->
        <div
          class="t-radio-group"
          role="radiogroup"
        >
          <!--v-if-->
          
          
          <div
            class="t-radio t-radio--left t-radio--block t-dropdown-item__radio t-is-tick"
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="option_0"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                选项一
              </span>
              <!--v-if-->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block t-dropdown-item__radio t-is-tick"
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="option_1"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                选项二
              </span>
              <!--v-if-->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block t-dropdown-item__radio t-is-tick"
          >
            <input
              class="t-radio__original"
              disabled=""
              name=""
              type="radio"
              value="disabled-item"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--disabled"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title t-radio__title--disabled"
                style=""
              >
                禁用选项
              </span>
              <!--v-if-->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          
          
        </div>
        
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;
